--- a/assets/style.css
+++ b/assets/style.css
@@ -1,147 +1,15 @@
-/* Google Font */
-/* latin-ext */
-@font-face {
-	font-family: 'Inter';
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZFhiJ-Ek-_EeAmM.woff2) format('woff2');
-	unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin */
-@font-face {
-	font-family: 'Inter';
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin-ext */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 300;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCu-xNNww_2s0amA9M8qtHEWfqFXVAKArdqqQ.woff2) format('woff2');
-	unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 300;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCu-xNNww_2s0amA9M8qtHEWfSFXVAKArc.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-  
-/* latin-ext */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCt-xNNww_2s0amA9M8onTmTNmnUHowCw.woff2) format('woff2');
-	unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-  
-/* latin */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCt-xNNww_2s0amA9M8onrmTNmnUHo.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-  
-/* latin-ext */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 800;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCu-xNNww_2s0amA9M8qt3AWfqFXVAKArdqqQ.woff2) format('woff2');
-	unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-  
-/* latin */
-@font-face {
-	font-family: 'Spectral';
-	font-style: italic;
-	font-weight: 800;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCu-xNNww_2s0amA9M8qt3AWfSFXVAKArc.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-  
-/* latin-ext */
-@font-face {
-	font-family: 'Spectral';
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCr-xNNww_2s0amA9M3knjsS_ulYHs.woff2) format('woff2');
-	unicode-range: U+0100-02AF, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-  
-/* latin */
-@font-face {
-	font-family: 'Spectral';
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/spectral/v13/rnCr-xNNww_2s0amA9M5knjsS_ul.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* CSS GENERAL */
 body {
 	max-width: 1920px;
 	margin: auto;
 }
-
 * {
-	font-family: 'Inter', sans-serif;
+	font-family: 'Inter';
 	font-style: normal;
 }
-
-.quote {
-	width: 70%;
-	margin: auto;
-	padding-block: 3em;
-}
-
-.quote-text {
-	font-style: italic;
-	font-weight: 300;
-	font-size: 40px;
-}
-
-.quote-author {
-	font-weight: 800;
-	font-size: 22px;
-}
-
-.quote-text, .quote-author, #about-me .about-me-introduction {
-	font-family: 'Spectral', serif;
-}
-
-.auto-size-slide, .picture img, .img-fluid {
-	width: 100%;
-	height: auto;
-}
-
-/* CSS HEADER */
-/* .top-header */
 .top-header {
 	background-color: white;
 	position: sticky;
 	top:0;
-	width: 100%;
 	z-index: 1000;
 	display: flex;
 	justify-content: space-between;
@@ -154,27 +22,26 @@ body {
 	font-size: 26px;
 }
 
-nav ul {
+.nav ul {
 	display: flex;
 	list-style-type: none;
 	font-size: 14px;
 	margin-bottom: 0;
 }
 
-nav li {
+.nav li {
 	padding-inline: 10px;
 }
 
-nav a {
+.nav a {
 	text-decoration: none;
-	color: #000;
+	color: #000
 }
 
-a:hover {
-	color: #000;
+.social-link img {
+	width: 20px;
 }
 
-/* CSS #about */
 #about {
 	display: flex;
 	background-color: #F6D2B8;
@@ -200,69 +67,58 @@ a:hover {
 	z-index: 0;
 }
 
+.picture img {
+	width: 100%;
+
+}
 #about-me {
 	flex: 2
 }
-
-.about-me-title {
+.about-me__title {
 	margin-top: 1em;
 	margin-bottom: 60px;
 	font-size: 30px;
 }
-
-#about-me .about-me-introduction {
+.about-me__introduction {
+	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
-	font-size: 16px;
 }
-
 #about-me p {
 	width: 80%;
 	font-size: 14px;
 }
 
-/* CSS #gallery */
-.title {
+#gallery {
+	/*	min-height: 100vh; */
+}
+.title{
 	text-align: center;
 	padding-block: 2em;
 }
-
 .gallery .nav {
 	justify-content: center;
 }
-
-.nav li {
-	padding-inline: 10px;
-}
-
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #000;
+	color: #fff;
 	background-color: #BEB45A;
-	border-radius: 0 ;
+	border-radius:0 ;
 }
-
 .nav-pills .nav-link {
-	color: #000;
+	color: #000
 }
-
-.nav-pills .nav-link:hover, .gallery img:hover {
-	cursor: pointer;
-}
-
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
 	padding: 0;
 }
-
 .item-column::after{
 	content: "";
 	display: block;
 	padding-bottom: 100%;
 
 }
-
 .gallery-item {
 	position: absolute;
 	width: 100%;
@@ -270,7 +126,6 @@ a:hover {
 	object-fit: cover;
 	padding: .5em;
 }
-
 .mg-prev, .mg-next {
 	width: 30px;
 	height: 30px;
@@ -281,13 +136,30 @@ a:hover {
 	font-size: 24px;
 }
 
-/* CSS #services */
+.quote {
+	font-family: 'Spectral';
+	font-style: italic;
+	width: 70%;
+	margin: auto;
+	padding-block: 3em;
+}
+.quote__text {
+	font-family: Spectral;
+	font-style: italic;
+	font-weight: 300;
+
+}
+.quote__author {
+	font-family: Spectral;
+	font-weight: 800;
+	font-size: 22px;
+}
+
 #services {
 	margin: auto;
 	background-color: #A8D5D8 ;
 	position: relative;
 }
-
 #services .container::before{
 	content: ' ';
 	background-color: #1C6474;
@@ -300,9 +172,10 @@ a:hover {
 }
 
 #services .container {
-	display: flex;
 	justify-content: space-between;
+	display: flex;
 	padding : 2em 0;
+
 }
 
 .service {
@@ -317,10 +190,9 @@ a:hover {
 	z-index: 1;
 }
 
-/* CSS #contact */
 #contact {
 	margin: auto;
-	background-color: #D8D3A8;
+	background-color: #D8D3A8 ;
 	position: relative;
 	padding-inline: 100px;
 	padding-block: 100px;
@@ -329,7 +201,6 @@ a:hover {
 #contact .container {
 	display: flex;
 }
-
 .picture.right::before {
 	content: ' ';
 	background-color: #BEB45A;
@@ -340,11 +211,10 @@ a:hover {
 	right: 0;
 	z-index: -1;
 }
-
 .form-container {
 	flex : 2;
-}
 
+}
 form {
 	display: flex;
 	flex-direction: column;
@@ -369,47 +239,29 @@ form textarea {
 	font-size: 1.2em;
 	margin-bottom: 20px;
 }
-
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
 
-/* CSS FOOTER */
-footer {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	padding-top: 40px;
-	padding-bottom: 20px;
-	text-align: center;
-	background-color: #F6D2B8;
-}
-
-footer li {
-	list-style: none;
-}
-
-
-@media screen and (max-width: 1180px) {
+@media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
 	}
 	#about, #contact .container {
 		align-items: center;
 	}
-	.about-me-title {
+	.about-me__title {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me .about-me-introduction, #about-me p {
+	#about-me h6, #about-me p {
 		width: 100%;
 	}
 }
 
-@media screen and (max-width: 1000px) {
-	#about {
+@media all and (max-width: 1000px) {
+	#about{
 		flex-direction: column;
 
 	}
@@ -425,7 +277,7 @@ footer li {
 		left: 0;
 		z-index: -1;
 	}
-	.about-me-title, h1 {
+	.about-me__title{
 		text-align: center;
 		margin-top: 1em;
 	}
@@ -438,11 +290,11 @@ footer li {
 		height: auto;
 		margin: 2em 0
 	}
-	.service-description {
+	.service__description{
 		margin-bottom: 1em;
 	}
 
-	#services .container::before {
+	#services .container::before{
 		width: 30%;
 		height: 100%;
 		bottom: 0;
@@ -467,16 +319,16 @@ footer li {
 	}
 }
 
-@media screen and (max-width: 650px) {
+@media all and (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
 		padding-inline: 0;
 	}
-	.top-header nav, .top-header nav ul {
+	.top-header .nav, .top-header .nav ul {
 		width: 100%;
 		padding: 0 0 0 0;
 	}
-	.top-header nav li {
+	.top-header .nav li {
 		flex: 1;
 		padding-block: 1em;
 		text-align: center;
@@ -499,10 +351,5 @@ footer li {
 	}
 	.picture {
 		width: 80%;
-	}
-	footer {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
 	}
 }
